--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
         "@radix-ui/react-toggle-group": "1.1.2",
         "@radix-ui/react-tooltip": "1.1.8",
         "@supabase/supabase-js": "^2.94.1",
+        "@types/file-saver": "^2.0.7",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "cmdk": "1.1.1",
         "date-fns": "3.6.0",
         "embla-carousel-react": "8.6.0",
+        "file-saver": "^2.0.5",
         "input-otp": "1.4.2",
         "lucide-react": "0.487.0",
         "motion": "12.23.24",
@@ -62,13 +64,14 @@
         "sonner": "2.0.3",
         "tailwind-merge": "3.2.0",
         "tw-animate-css": "1.3.8",
-        "vaul": "1.1.2"
+        "vaul": "1.1.2",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@tailwindcss/vite": "4.1.12",
         "@vitejs/plugin-react": "4.7.0",
         "tailwindcss": "4.1.12",
-        "vite": "6.3.5"
+        "vite": "^6.4.1"
     },
     "peerDependencies": {
         "react": "18.3.1",
