--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "@radix-ui/react-toggle": "1.1.2",
         "@radix-ui/react-toggle-group": "1.1.2",
         "@radix-ui/react-tooltip": "1.1.8",
-        "@supabase/supabase-js": "^2.94.1",
         "@types/file-saver": "^2.0.7",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
@@ -71,6 +70,7 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "4.1.12",
+        "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "4.7.0",
         "tailwindcss": "4.1.12",
