--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "4.7.0",
         "tailwindcss": "4.1.12",
+        "typescript": "^5.9.3",
         "vite": "^6.4.1"
     },
     "pnpm": {
