feat: add demo environment setup including configuration, guide, and launch script.

--- a/.env
+++ b/.env
@@ -1,1 +1,19 @@
+# ------------------------------------------------------------------
+# CONFIGURATION FOR OPTIMIZER DEMO
+# ------------------------------------------------------------------
 
+# 1. Get this from @BotFather on Telegram
+#    - Open Telegram
+#    - Search for @BotFather
+#    - Send /newbot (or /mybots if you already have one)
+#    - Copy the HTTP API Token
+BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+
+# 2. This is the URL where your web app *will* run.
+#    Since you are running locally (on your laptop), use localhost.
+#    IMPORTANT: This means the app will ONLY work on THIS laptop.
+#    You cannot open it on your phone unless you use ngrok/localtunnel.
+WEBAPP_URL=http://localhost:5173
+
+# 3. Database setting (leave as is)
+DB_PATH=database.db
