--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,13 @@ services:
       - .:/app
     restart: unless-stopped
     env_file: .env
+
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - api
+    restart: unless-stopped
